# internal/handlers/taskHandlers.go
@@ -5,28 +5,29 @@ import (
 	"errors"
 	"github.com/Imnarka/simple-crud/internal/models"
 	"github.com/Imnarka/simple-crud/internal/service"
-	"github.com/Imnarka/simple-crud/internal/web/tasks"
+	api "github.com/Imnarka/simple-crud/internal/web/tasks"
+	serviceError "github.com/Imnarka/simple-crud/internal/errors"
 )
 
-type Handler struct {
+type TaskHandler struct {
 	Service *service.TaskService
 }
 
-func NewHandler(service *service.TaskService) *Handler {
-	return &Handler{
+func NewTaskHandler(service *service.TaskService) *TaskHandler {
+	return &TaskHandler{
 		Service: service,
 	}
 }
 
-func (h *Handler) GetTasks(context.Context, tasks.GetTasksRequestObject) (tasks.GetTasksResponseObject, error) {
+func (h *TaskHandler) GetTasks(context.Context, api.GetTasksRequestObject) (api.GetTasksResponseObject, error) {
 	taskList, err := h.Service.GetTasks()
 	if err != nil {
 		return nil, err
 	}
-	response := make(tasks.GetTasks200JSONResponse, 0, len(taskList))
+	response := make(api.GetTasks200JSONResponse, 0, len(taskList))
 	for _, task := range taskList {
-		response = append(response, tasks.Task{
-			Id:     &task.ID,
+		response = append(response, api.Task{
+			Id:     task.ID,
 			IsDone: &task.IsDone,
 			Task:   task.Task,
 		})
@@ -34,25 +35,25 @@ func (h *Handler) GetTasks(context.Context, tasks.GetTasksRequestObject) (tasks.
 	return response, nil
 }
 
-func (h *Handler) GetTaskByID(_ context.Context, request tasks.GetTaskByIDRequestObject) (tasks.GetTaskByIDResponseObject, error) {
+func (h *TaskHandler) GetTaskByID(_ context.Context, request api.GetTaskByIDRequestObject) (api.GetTaskByIDResponseObject, error) {
 	task, err := h.Service.GetTaskById(request.Id)
 	if err != nil {
-		if errors.Is(err, service.ErrTaskNotFound) {
-			return tasks.GetTaskByID404Response{}, nil
+		if errors.Is(err, serviceError.ErrTaskNotFound) {
+			return api.GetTaskByID404Response{}, nil
 		}
-		return tasks.GetTaskByID500Response{}, nil
+		return api.GetTaskByID500Response{}, nil
 	}
-	return tasks.GetTaskByID200JSONResponse{
-		Id:     &task.ID,
+	return api.GetTaskByID200JSONResponse{
+		Id:     task.ID,
 		IsDone: &task.IsDone,
 		Task:   task.Task,
 	}, nil
 }
 
-func (h *Handler) PostTasks(_ context.Context, request tasks.PostTasksRequestObject) (tasks.PostTasksResponseObject, error) {
+func (h *TaskHandler) CreateTask(_ context.Context, request api.CreateTaskRequestObject) (api.CreateTaskResponseObject, error) {
 	taskRequest := request.Body
 	if request.Body.Task == "" {
-		return tasks.PostTasks422Response{}, nil
+		return api.CreateTask422Response{}, nil
 	}
 	taskToCreate := models.Task{
 		Task:   taskRequest.Task,
@@ -60,41 +61,41 @@ func (h *Handler) PostTasks(_ context.Context, request tasks.PostTasksRequestObj
 	}
 	createdTask, err := h.Service.CreateTask(&taskToCreate)
 	if err != nil {
-		return tasks.PostTasks500Response{}, err
+		return api.CreateTask500Response{}, err
 	}
-	response := tasks.PostTasks200JSONResponse{
-		Id:     &createdTask.ID,
+	response := api.CreateTask200JSONResponse{
+		Id:     createdTask.ID,
 		Task:   createdTask.Task,
 		IsDone: &createdTask.IsDone,
 	}
 	return response, nil
 }
 
-func (h *Handler) UpdateTask(_ context.Context, request tasks.UpdateTaskRequestObject) (tasks.UpdateTaskResponseObject, error) {
-	updatedTask, err := h.Service.UpdateTask(request.Id, *request.Body)
+func (h *TaskHandler) UpdateTask(_ context.Context, request api.UpdateTaskRequestObject) (api.UpdateTaskResponseObject, error) {
+	updatedTask, err := h.Service.UpdateTask(request.Id, request.Body)
 	if err != nil {
-		if errors.Is(err, service.ErrInvalidRequestFormat) {
-			return tasks.UpdateTask400Response{}, nil
+		if errors.Is(err, serviceError.ErrInvalidRequestFormat) {
+			return api.UpdateTask400Response{}, nil
 		}
-		if errors.Is(err, service.ErrTaskNotFound) {
-			return tasks.UpdateTask404Response{}, nil
+		if errors.Is(err, serviceError.ErrTaskNotFound) {
+			return api.UpdateTask404Response{}, nil
 		}
-		return tasks.UpdateTask500Response{}, nil
+		return api.UpdateTask500Response{}, nil
 	}
-	return tasks.UpdateTask200JSONResponse{
-		Id:     &updatedTask.ID,
+	return api.UpdateTask200JSONResponse{
+		Id:     updatedTask.ID,
 		IsDone: &updatedTask.IsDone,
 		Task:   updatedTask.Task,
 	}, nil
 }
 
-func (h *Handler) DeleteTask(_ context.Context, request tasks.DeleteTaskRequestObject) (tasks.DeleteTaskResponseObject, error) {
+func (h *TaskHandler) DeleteTask(_ context.Context, request api.DeleteTaskRequestObject) (api.DeleteTaskResponseObject, error) {
 	err := h.Service.DeleteTask(request.Id)
 	if err != nil {
-		if errors.Is(err, service.ErrTaskNotFound) {
-			return tasks.DeleteTask404Response{}, nil
+		if errors.Is(err, serviceError.ErrTaskNotFound) {
+			return api.DeleteTask404Response{}, nil
 		}
-		return tasks.DeleteTask500Response{}, nil
+		return api.DeleteTask500Response{}, nil
 	}
-	return tasks.DeleteTask204Response{}, nil
+	return api.DeleteTask204Response{}, nil
 }
