# internal/web/tasks/api.gen.go
@@ -1,7 +1,7 @@
-// Package tasks provides primitives to interact with the openapi HTTP API.
+// Package api provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
-package tasks
+package api
 
 import (
 	"context"
@@ -14,21 +14,29 @@ import (
 	strictecho "github.com/oapi-codegen/runtime/strictmiddleware/echo"
 )
 
+// CreateTask defines model for CreateTask.
+type CreateTask struct {
+	Task string `json:"task"`
+}
+
 // Task defines model for Task.
 type Task struct {
-	Id     *uint  `json:"id"`
-	IsDone *bool  `json:"is_done"`
+	Id     uint   `json:"id"`
+	IsDone *bool  `json:"is_done,omitempty"`
 	Task   string `json:"task"`
 }
 
-// UpdateTaskJSONBody defines parameters for UpdateTask.
-type UpdateTaskJSONBody map[string]interface{}
+// UpdateTask defines model for UpdateTask.
+type UpdateTask struct {
+	IsDone *bool   `json:"is_done,omitempty"`
+	Task   *string `json:"task,omitempty"`
+}
 
-// PostTasksJSONRequestBody defines body for PostTasks for application/json ContentType.
-type PostTasksJSONRequestBody = Task
+// CreateTaskJSONRequestBody defines body for CreateTask for application/json ContentType.
+type CreateTaskJSONRequestBody = CreateTask
 
 // UpdateTaskJSONRequestBody defines body for UpdateTask for application/json ContentType.
-type UpdateTaskJSONRequestBody UpdateTaskJSONBody
+type UpdateTaskJSONRequestBody = UpdateTask
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
@@ -37,7 +45,7 @@ type ServerInterface interface {
 	GetTasks(ctx echo.Context) error
 	// Создать новую задачу
 	// (POST /tasks)
-	PostTasks(ctx echo.Context) error
+	CreateTask(ctx echo.Context) error
 	// Удалить задачу по ID
 	// (DELETE /tasks/{id})
 	DeleteTask(ctx echo.Context, id uint) error
@@ -63,12 +71,12 @@ func (w *ServerInterfaceWrapper) GetTasks(ctx echo.Context) error {
 	return err
 }
 
-// PostTasks converts echo context to params.
-func (w *ServerInterfaceWrapper) PostTasks(ctx echo.Context) error {
+// CreateTask converts echo context to params.
+func (w *ServerInterfaceWrapper) CreateTask(ctx echo.Context) error {
 	var err error
 
 	// Invoke the callback with all the unmarshaled arguments
-	err = w.Handler.PostTasks(ctx)
+	err = w.Handler.CreateTask(ctx)
 	return err
 }
 
@@ -149,7 +157,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	}
 
 	router.GET(baseURL+"/tasks", wrapper.GetTasks)
-	router.POST(baseURL+"/tasks", wrapper.PostTasks)
+	router.POST(baseURL+"/tasks", wrapper.CreateTask)
 	router.DELETE(baseURL+"/tasks/:id", wrapper.DeleteTask)
 	router.GET(baseURL+"/tasks/:id", wrapper.GetTaskByID)
 	router.PATCH(baseURL+"/tasks/:id", wrapper.UpdateTask)
@@ -172,35 +180,43 @@ func (response GetTasks200JSONResponse) VisitGetTasksResponse(w http.ResponseWri
 	return json.NewEncoder(w).Encode(response)
 }
 
-type PostTasksRequestObject struct {
-	Body *PostTasksJSONRequestBody
+type CreateTaskRequestObject struct {
+	Body *CreateTaskJSONRequestBody
 }
 
-type PostTasksResponseObject interface {
-	VisitPostTasksResponse(w http.ResponseWriter) error
+type CreateTaskResponseObject interface {
+	VisitCreateTaskResponse(w http.ResponseWriter) error
 }
 
-type PostTasks200JSONResponse Task
+type CreateTask200JSONResponse Task
 
-func (response PostTasks200JSONResponse) VisitPostTasksResponse(w http.ResponseWriter) error {
+func (response CreateTask200JSONResponse) VisitCreateTaskResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(200)
 
 	return json.NewEncoder(w).Encode(response)
 }
 
-type PostTasks422Response struct {
+type CreateTask400Response struct {
 }
 
-func (response PostTasks422Response) VisitPostTasksResponse(w http.ResponseWriter) error {
+func (response CreateTask400Response) VisitCreateTaskResponse(w http.ResponseWriter) error {
+	w.WriteHeader(400)
+	return nil
+}
+
+type CreateTask422Response struct {
+}
+
+func (response CreateTask422Response) VisitCreateTaskResponse(w http.ResponseWriter) error {
 	w.WriteHeader(422)
 	return nil
 }
 
-type PostTasks500Response struct {
+type CreateTask500Response struct {
 }
 
-func (response PostTasks500Response) VisitPostTasksResponse(w http.ResponseWriter) error {
+func (response CreateTask500Response) VisitCreateTaskResponse(w http.ResponseWriter) error {
 	w.WriteHeader(500)
 	return nil
 }
@@ -304,6 +320,14 @@ func (response UpdateTask404Response) VisitUpdateTaskResponse(w http.ResponseWri
 	return nil
 }
 
+type UpdateTask422Response struct {
+}
+
+func (response UpdateTask422Response) VisitUpdateTaskResponse(w http.ResponseWriter) error {
+	w.WriteHeader(422)
+	return nil
+}
+
 type UpdateTask500Response struct {
 }
 
@@ -319,7 +343,7 @@ type StrictServerInterface interface {
 	GetTasks(ctx context.Context, request GetTasksRequestObject) (GetTasksResponseObject, error)
 	// Создать новую задачу
 	// (POST /tasks)
-	PostTasks(ctx context.Context, request PostTasksRequestObject) (PostTasksResponseObject, error)
+	CreateTask(ctx context.Context, request CreateTaskRequestObject) (CreateTaskResponseObject, error)
 	// Удалить задачу по ID
 	// (DELETE /tasks/{id})
 	DeleteTask(ctx context.Context, request DeleteTaskRequestObject) (DeleteTaskResponseObject, error)
@@ -366,29 +390,29 @@ func (sh *strictHandler) GetTasks(ctx echo.Context) error {
 	return nil
 }
 
-// PostTasks operation middleware
-func (sh *strictHandler) PostTasks(ctx echo.Context) error {
-	var request PostTasksRequestObject
+// CreateTask operation middleware
+func (sh *strictHandler) CreateTask(ctx echo.Context) error {
+	var request CreateTaskRequestObject
 
-	var body PostTasksJSONRequestBody
+	var body CreateTaskJSONRequestBody
 	if err := ctx.Bind(&body); err != nil {
 		return err
 	}
 	request.Body = &body
 
 	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
-		return sh.ssi.PostTasks(ctx.Request().Context(), request.(PostTasksRequestObject))
+		return sh.ssi.CreateTask(ctx.Request().Context(), request.(CreateTaskRequestObject))
 	}
 	for _, middleware := range sh.middlewares {
-		handler = middleware(handler, "PostTasks")
+		handler = middleware(handler, "CreateTask")
 	}
 
 	response, err := handler(ctx, request)
 
 	if err != nil {
 		return err
-	} else if validResponse, ok := response.(PostTasksResponseObject); ok {
-		return validResponse.VisitPostTasksResponse(ctx.Response())
+	} else if validResponse, ok := response.(CreateTaskResponseObject); ok {
+		return validResponse.VisitCreateTaskResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
