# openapi/openapi.yaml
@@ -6,6 +6,7 @@ paths:
   /tasks:
     get:
       summary: Получить все задачи
+      operationId: GetTasks
       tags:
         - tasks
       responses:
@@ -19,6 +20,7 @@ paths:
                   $ref: '#/components/schemas/Task'
     post:
       summary: Создать новую задачу
+      operationId: CreateTask
       tags:
         - tasks
       requestBody:
@@ -27,7 +29,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Task'
+              $ref: '#/components/schemas/CreateTask'
       responses:
         '200':
           description: Новая задача
@@ -35,6 +37,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Task'
+        '400':
+          description: Некорректный запрос
         '422':
           description: Неверное тело запроса
         '500':
@@ -76,11 +80,11 @@ paths:
             type: integer
             format: uint
       requestBody:
+        required: true
         content:
           application/json:
             schema:
-              type: object
-              additionalProperties: true
+              $ref: '#/components/schemas/UpdateTask'
       responses:
         '200':
           description: Обновленная задача
@@ -90,6 +94,8 @@ paths:
                 $ref: '#/components/schemas/Task'
         '400':
           description: Неверный формат запроса
+        '422':
+          description: Неверные данные
         '404':
           description: Задача не найдена
         '500':
@@ -113,6 +119,120 @@ paths:
           description: Задача не найдена
         '500':
           description: Ошибка удаления задачи
+  /users:
+    get:
+      summary: Получить всех пользователей
+      tags:
+        - users
+      operationId: GetUsers
+      responses:
+        '200':
+          description: Список пользователей
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UsersResponse'
+    post:
+      summary: Добавить нового пользователя
+      operationId: CreateUser
+      tags:
+        - users
+      requestBody:
+        description: Новый пользователь
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateUser'
+      responses:
+        '200':
+          description: Новый пользователь
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UsersResponse'
+        '400':
+          description: Некорректный запрос
+        '422':
+          description: Пользователь с таким email уже существует
+        '500':
+          description: Ошибка добавления пользователя
+  /users/{id}:
+    get:
+      summary: Получить данные пользователя
+      operationId: GetUserById
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: Данные пользователя
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UsersResponse'
+        '404':
+          description: Пользователь не найден
+        '500':
+          description: Ошибка при получении пользователя
+    patch:
+      summary: Обновить данные пользователя
+      operationId: UpdateUser
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUser'
+      responses:
+        '200':
+          description: Обновленный пользователь
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UsersResponse'
+        '400':
+          description: Некорректный запрос
+        '422':
+          description: Пользователь с таким email уже существует
+        '500':
+          description: Ошибка обновления данных пользователя
+    delete:
+      summary: Удалить пользователя
+      operationId: DeleteUserById
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '204':
+          description: Пользователь успешно удален
+        '404':
+          description: Пользователь не найден
+        '500':
+          description: Ошибка удаления пользователя
 
 components:
   schemas:
@@ -122,11 +242,55 @@ components:
         id:
           type: integer
           format: uint
-          nullable: true
         task:
           type: string
         is_done:
           type: boolean
-          nullable: true
+      required:
+        - id
+        - task
+    CreateTask:
+      type: object
+      properties:
+        task:
+          type: string
       required:
         - task
+    UpdateTask:
+      type: object
+      properties:
+        task:
+          type: string
+        is_done:
+          type: boolean
+    UsersResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+          format: email
+      required:
+        - id
+        - email
+    CreateUser:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          type: string
+      required:
+        - email
+        - password
+    UpdateUser:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+        password:
+          type: string
